# skating-biomechanics-ml

./: .dockerignore  .env.example  .gitguardian.yml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.json  DESIGN.md  MIGRATION_NOTES.md  PRODUCT.md  README.md  ROADMAP.md  Taskfile.yaml  Taskfile.yml  dump.rdb  lefthook.yml  package.json  pyproject.toml  pytest.ini  sgconfig.yml  skills-lock.json
alembic/: env.py
backend/: .containerignore  CLAUDE.md  Containerfile  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_12_1910-aac592d509a9_add_choreography_tables.py  2026_04_16_1722-8468345cba68_add_pose_data_columns.py  2026_04_20_1340-a5a7881165d4_increase_fingerprint_to_64.py  2026_05_01_1518-319070b4dea9_add_process_task_id_to_sessions.py  2026_05_02_1136-204037a99fab_add_onboarding_role_to_users.py  2026_05_05_0848-99cf52a0be50_add_workspaces_and_subscriptions.py  (+4 more)
backend/app/: config.py  database.py  di.py  exceptions.py  lifespan.py  logging_config.py  main.py  schemas.py  storage.py  task_manager.py  worker.py
backend/scripts/: seed_demo.py  upload_email_templates.sh
backend/tests/: conftest.py  test_auth_routes.py  test_deps.py  test_diagnostics.py  test_email_service.py  test_logging_config.py  test_main.py  test_metrics_registry.py  test_models.py  test_pr_tracker.py  test_schemas.py  test_security.py  test_storage.py  test_task_manager.py  test_task_manager_unit.py  test_user_routes.py  test_vastai_client.py  test_vastai_client_extended.py  test_workspace_models.py  test_workspace_routes.py
(+1078 files in other folders)
