[project]
name = "skating-backend"
version = "0.1.0"
description = "Litestar backend for figure skating biomechanics analysis"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30",
    "bcrypt>=4.0,<4.1",
    "email-validator>=2.3.0",
    "granian>=2.0",
    "litestar[standard]>=2.15",
    "passlib[bcrypt]>=1.7",
    "PyJWT>=2.9",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.22",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.5.0",
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "boto3>=1.42.83",
    "msaf>=0.1.0",
    "librosa>=0.10.0",
    "aiobotocore>=3.4.0",
    "pychromaprint>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
